<resources>
    <string name="app_name">Mengenal Bagian Tumbuhan</string>
    <string name="mengenal_bagian_tumbuhan_dan_fungsinya">Mengenal Bagian Tumbuhan dan Fungsinya</string>
    <string name="materi">Materi</string>
    <string name="materi1_bunga1">1)	Kelopak Bagian terluar dari bunga adalah kelopak. Fungsi kelopak, yaitu untuk melindungi bunga pada waktu bunga masih muda yang berbentuk kuncup bunga. Kelopak umumnya berwarna hijau seperti daun, tetapi ada pula kelopak yang berwarna selain hijau, sehingga tampak seperti mahkota bunga.</string>
    <string name="materi1_bunga2">2)	Mahkota atau Tajuk Bunga Tajuk bunga atau mahkota bunga merupakan hiasan pada bunga yang terdapat di sebelah dalam kelopak. Umumnya mahkota ini ukurannya lebih besar daripada kelopak dan berwarna indah serta menarik, tidak jarang pula mempunyai bau yang harum atau sedap. Warna yang indah dan baunya yang harum inilah yang merupakan daya tarik bagi serangga atau binatang lain seperti burung dan kelelawar untuk mendatangi bunga. Fungsi lain tajuk bunga adalah melindungi alat-alat kelamin pada bunga sebelum terjadi proses penyerbukan. Setiap helaian tajuk bunga disebut petala.</string>
    <string name="materi1_bunga3">3)	Benang Sari (Alat Kelamin Jantan) Benang sari bagi tumbuhan merupakan alat kelamin jantan. Seperti halnya dengan bagian-bagian bunga yang diuraikan terdahulu, benang sari pun merupakan hasil dari metamorfosis daun, yang bentuk dan fungsinya telah disesuaikan sebagai alat kelamin jantan. Bukti bahwa benang sari merupakan hasil metamorfosis daun, terlihat sangat nyata pada bunga jenis tumbuhan tertentu, contohnya pada bunga tasbih. Benang sari dibedakan menjadi tiga bagian, yaitu tangkai sari, kepala sari, dan penghubung ruang sari. Tangkai sari, yaitu bagian yang  berbentuk benang dengan penampang melintang yang umumnya berbentuk bulat, sedangkan kepala sari, yaitu bagian benang sari yang terdapat pada ujung tangkai sari.</string>
    <string name="materi1_bunga4">4)	Putik merupakan bagian bunga yang paling dalam letaknya. Putik merupakan alat kelamin betina pada bunga. Putik pun tersusun atas daun-daun yang telah mengalami metamorfosis. Daun-daun penyusun putik disebut daun buah. Putik terdiri dari tiga bagian, yaitu bakal buah, tangkai kepala putik, dan kepala putik. Bakal buah merupakan bagian putik yang pada umumnya kelihatan membesar dan terletak pada dasar bunga. Sedangkan tangkai kepala putik merupakan bagian putik yang sempit dan terdapat di atas bakal buah, biasanya berbentuk benang, fungsinya untuk tempat melekatnya kepala putik. Kepala putik ialah bagian dari putik yang paling atas, terletak pada ujung tangkai kepala putik tadi.</string>
    <string name="materi1_bunga5">5)	Tangkai bunga merupakan bagian bunga yang berada pada bagian bawah bunga. Tangkai bunga berfungsi sebagai penopang dan penghubung antara tangkai bunga dengan ranting.</string>
    <string name="materi2_daun">Selain dibedakan berdasarkan bentuk pertulang daunnya, daun juga dibedakan berdasarkan jumlah helai daun pada setiap tangkainya, yaitu daun tunggal dan majemuk. \n\nDaun tunggal adalah daun yang berjumlah satu helai dalam setiap tangkainya, contohnya daun jambu. Daun majemuk adalah daun yang terdiri dari beberapa helai dalam setiap tangkainya, contohnya daun putri malu.</string>
    <string name="materi_telah_selesai_silahkan_kembali_ke_menu_utama">Materi telah selesai, silahkan kembali ke menu utama</string>
    <string name="lainnya">Lainnya</string>
    <string name="materi1_batang">Pada batang, terdapat buku-buku batang dan ruas. Buku batang adalah tempat melekat/duduk daun. Sedangkan ruas batang adalah jarak antar buku-buku. Seperti pada gambar berikut ini:</string>
    <string name="buah">"<b>" + buah + "</b>"</string>
</resources>